
    HADOOP-9802. Support Snappy codec on Windows. (cnauroth)

    HADOOP-9879. Move the version info of zookeeper dependencies to
    hadoop-project/pom (Karthik Kambatla via Sandy Ryza)
    
    HADOOP-9886. Turn warning message in RetryInvocationHandler to debug (arpit)

    HADOOP-9906. Move HAZKUtil to o.a.h.util.ZKUtil and make inner-classes
    public (Karthik Kambatla via Sandy Ryza)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9768. chown and chgrp reject users and groups with spaces on platforms
    where spaces are otherwise acceptable. (cnauroth)

    HADOOP-9801. Configuration#writeXml uses platform defaulting encoding, which
    may mishandle multi-byte characters. (cnauroth)

    HADOOP-9806 PortmapInterface should check if the procedure is out-of-range
    (brandonli)

    HADOOP-9527. Add symlink support to LocalFileSystem on Windows.
    (Arpit Agarwal via cnauroth)

    HADOOP-9831. Make checknative shell command accessible on Windows. (cnauroth)

    HADOOP-9675. use svn:eol-style native for html to prevent line ending
    issues (Colin Patrick McCabe)

    HADOOP-9757. Har metadata cache can grow without limit (Cristina Abad via daryn)

    HADOOP-9857. Tests block and sometimes timeout on Windows due to invalid
    entropy source. (cnauroth)

    HADOOP-9381. Document dfs cp -f option. (Keegan Witt, suresh via suresh)

    HADOOP-9868. Server must not advertise kerberos realm. (daryn via kihwal)

    HADOOP-9880. SASL changes from HADOOP-9421 breaks Secure HA NN. (daryn via
    jing9)

    HADOOP-9887. globStatus does not correctly handle paths starting with a drive
    spec on Windows. (Chuan Liu via cnauroth)

    HADOOP-9894.  Race condition in Shell leads to logged error stream handling
    exceptions (Arpit Agarwal)

    HADOOP-9774. RawLocalFileSystem.listStatus() return absolute paths when
    input path is relative on Windows. (Shanyu Zhao via ivanmi)

Release 2.1.0-beta - 2013-08-22

  INCOMPATIBLE CHANGES
