@@ -38,6 +38,30 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertFalse
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|fail
 import|;
 end_import
@@ -81,6 +105,20 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|service
+operator|.
+name|AbstractService
 import|;
 end_import
 
@@ -1395,6 +1433,107 @@ operator|.
 name|INITED
 argument_list|,
 name|child
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|1000
+argument_list|)
+DECL|method|testAddIfService ()
+specifier|public
+name|void
+name|testAddIfService
+parameter_list|()
+block|{
+name|CompositeService
+name|testService
+init|=
+operator|new
+name|CompositeService
+argument_list|(
+literal|"TestService"
+argument_list|)
+block|{
+name|Service
+name|service
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|void
+name|serviceInit
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+name|Integer
+name|notAService
+init|=
+operator|new
+name|Integer
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Added an integer as a service"
+argument_list|,
+name|addIfService
+argument_list|(
+name|notAService
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|service
+operator|=
+operator|new
+name|AbstractService
+argument_list|(
+literal|"Service"
+argument_list|)
+block|{}
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Unable to add a service"
+argument_list|,
+name|addIfService
+argument_list|(
+name|service
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+name|testService
+operator|.
+name|init
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Incorrect number of services"
+argument_list|,
+literal|1
+argument_list|,
+name|testService
+operator|.
+name|getServices
+argument_list|()
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
