@@ -1046,24 +1046,6 @@ name|server
 operator|.
 name|nodemanager
 operator|.
-name|NodeStatusUpdaterImpl
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|server
-operator|.
-name|nodemanager
-operator|.
 name|containermanager
 operator|.
 name|application
@@ -2042,32 +2024,6 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
-block|}
-DECL|method|addIfService (Object object)
-specifier|private
-name|void
-name|addIfService
-parameter_list|(
-name|Object
-name|object
-parameter_list|)
-block|{
-if|if
-condition|(
-name|object
-operator|instanceof
-name|Service
-condition|)
-block|{
-name|addService
-argument_list|(
-operator|(
-name|Service
-operator|)
-name|object
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 DECL|method|createLogHandler (Configuration conf, Context context, DeletionService deletionService)
 specifier|protected
