@@ -218,20 +218,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|service
-operator|.
-name|Service
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|util
 operator|.
 name|ExitUtil
@@ -2185,32 +2171,6 @@ operator|new
 name|AsyncDispatcher
 argument_list|()
 return|;
-block|}
-DECL|method|addIfService (Object object)
-specifier|protected
-name|void
-name|addIfService
-parameter_list|(
-name|Object
-name|object
-parameter_list|)
-block|{
-if|if
-condition|(
-name|object
-operator|instanceof
-name|Service
-condition|)
-block|{
-name|addService
-argument_list|(
-operator|(
-name|Service
-operator|)
-name|object
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 DECL|method|createAMRMTokenSecretManager ( Configuration conf)
 specifier|protected
